# league_coach

./: CMakeLists.txt  README.md
include/: controller.h  frame_listener.h  league_analyst.h  league_coach.h  process.h  screenshot_agent.h
src/: controller.cpp  frame_listener.cpp  league_analyst.cpp  league_coach.cpp  main.cpp  screenshot_agent.cpp
